--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,9 @@
 !!!5
 html
     head
-        != js('app')
-        != css('style')
         != js('lib/angular.min')
+        != js('app.js')
+        != css('style')
         block head
-    body(ng-app)
+    body(ng-app="hangoutApp")
         block body
