countdown and header

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block body
-    h1 Hey bitches
-        countdown
+    div.header
+        h1 E/L   Hangout starts in
+        div.countdown
+            countdown
