--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
         != js('lib/angular.min')
         != js('app.js')
         != css('style')
+        script(src="//use.typekit.net/agt4rwu.js")
+        script try{Typekit.load();}catch(e){}
         block head
     body(ng-app="hangoutApp")
         block body
